adding logfile to the previous code

--- a/market_cap.ipynb
+++ b/market_cap.ipynb
@@ -2,22 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "url=\"https://web.archive.org/web/20200318083015/https://en.wikipedia.org/wiki/List_of_largest_banks\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#logging\n",
+    "def log(message):\n",
+    "    timestamp_format='%Y-%h-%d-%H:%M:%S'\n",
+    "    now=datetime.now()\n",
+    "    timestamp=now.strftime(timestamp_format)\n",
+    "    with open(\"logfile.txt\",\"a\") as f:\n",
+    "        f.write(timestamp +' , '+ message + '\\n')"
    ]
   },
   {
@@ -30,18 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def copy_page(url):\n",
     "    \"\"\"copy the specified page using specified url\"\"\"\n",
+    "    log(\"copying started\")\n",
     "    response=requests.get(url)\n",
     "    if response.status_code>=200 and response.status_code<=299:\n",
     "        page_content=response.text\n",
     "        with open('List-of-largest-banks.html','w',encoding=\"utf-8\") as file:\n",
     "            file.write(page_content) \n",
-    "    return \"list-of-largest-banks downloaded\""
+    "            log(\"copying completed\")\n",
+    "    return \"list-of-largest-banks.html downloaded\""
    ]
   },
   {
@@ -54,15 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse(file):\n",
     "    \"\"\"reading the content from the file and we use BEAUTIFULSOUP object to parse the content\"\"\"\n",
+    "    log(\"parsing started\")\n",
     "    with open(file,'r') as f:\n",
     "        html_source=f.read()\n",
     "    doc=BeautifulSoup(html_source,'html.parser')\n",
+    "    log(\"parsing completed\")\n",
     "    return doc"
    ]
   },
@@ -76,11 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract(doc):\n",
+    "    log(\"extraction started../\")\n",
     "    data = pd.DataFrame(columns=[\"Name\", \"Market Cap (US$ Billion)\"])\n",
     "\n",
     "    for row in doc.find_all('tbody')[2].find_all('tr'):\n",
@@ -90,6 +111,7 @@
     "            Market_cap=[col[2].text.strip()]\n",
     "            New_data=pd.DataFrame({\"Name\":Bank_name, \"Market Cap (US$ Billion)\":Market_cap})\n",
     "            data = pd.concat([data, New_data], ignore_index=True)\n",
+    "    log(\"extraction completed..!\")\n",
     "\n",
     "    return data\n"
    ]
@@ -104,12 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load(data,targetfile):\n",
-    "    data.to_json(f\"{targetfile}.json\",orient = 'records',indent=5)"
+    "    log(\"loading started..!\")\n",
+    "    data.to_json(f\"{targetfile}.json\",orient = 'records',indent=5)\n",
+    "    log(\"loading completed..!\")"
    ]
   },
   {
@@ -122,18 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'list-of-largest-banks downloaded'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'datetime' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m copy_page(url)\n",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m, in \u001b[0;36mcopy_page\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcopy_page\u001b[39m(url):\n\u001b[1;32m      2\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"copy the specified page using specified url\"\"\"\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     log(\u001b[39m\"\u001b[39;49m\u001b[39mcopying started\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      4\u001b[0m     response\u001b[39m=\u001b[39mrequests\u001b[39m.\u001b[39mget(url)\n\u001b[1;32m      5\u001b[0m     \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code\u001b[39m>\u001b[39m\u001b[39m=\u001b[39m\u001b[39m200\u001b[39m \u001b[39mand\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code\u001b[39m<\u001b[39m\u001b[39m=\u001b[39m\u001b[39m299\u001b[39m:\n",
+      "Cell \u001b[0;32mIn[3], line 4\u001b[0m, in \u001b[0;36mlog\u001b[0;34m(message)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mlog\u001b[39m(message):\n\u001b[1;32m      3\u001b[0m     timestamp_format\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mY-\u001b[39m\u001b[39m%\u001b[39m\u001b[39mh-\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m-\u001b[39m\u001b[39m%\u001b[39m\u001b[39mH:\u001b[39m\u001b[39m%\u001b[39m\u001b[39mM:\u001b[39m\u001b[39m%\u001b[39m\u001b[39mS\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 4\u001b[0m     now\u001b[39m=\u001b[39mdatetime\u001b[39m.\u001b[39mnow()\n\u001b[1;32m      5\u001b[0m     timestamp\u001b[39m=\u001b[39mnow\u001b[39m.\u001b[39mstrftime(timestamp_format)\n\u001b[1;32m      6\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mlogfile.txt\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'datetime' is not defined"
+     ]
     }
    ],
    "source": [
@@ -142,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,85 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Market Cap (US$ Billion)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>JPMorgan Chase</td>\n",
-       "      <td>390.934</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Industrial and Commercial Bank of China</td>\n",
-       "      <td>345.214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Bank of America</td>\n",
-       "      <td>325.331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Wells Fargo</td>\n",
-       "      <td>308.013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>China Construction Bank</td>\n",
-       "      <td>257.399</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      Name Market Cap (US$ Billion)\n",
-       "0                           JPMorgan Chase                  390.934\n",
-       "1  Industrial and Commercial Bank of China                  345.214\n",
-       "2                          Bank of America                  325.331\n",
-       "3                              Wells Fargo                  308.013\n",
-       "4                  China Construction Bank                  257.399"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
